pipeline: add start and end time to pipeline run info
