# pkg/apiserver/docs/swagger.yaml
@@ -119,8 +119,12 @@ definitions:
     properties:
       agent:
         type: string
+      endTime:
+        type: integer
       runID:
         type: string
+      startTime:
+        type: integer
       status:
         type: string
     type: object
